POM refactoring for JDK17