@@ -1,2 +1,3 @@
 #!/bin/sh
-java -Xmx2g -cp geohammer-jar-with-dependencies.jar --module-path /usr/share/openjfx/lib --add-modules javafx.controls,javafx.swing com.ugcs.gprvisualizer.app.MainGeoHammer
+SCRIPTPATH=$(dirname "$0")
+$SCRIPTPATH/jre17/bin/java -Xmx2g -cp $SCRIPTPATH/geohammer-jar-with-dependencies.jar com.ugcs.gprvisualizer.app.MainGeoHammer
